# art

./: .gitignore
canvas-sk/: complex_waterlily.pde  kroos.js  monta.js  package-lock.json  package.json  swirl.js
cnv-sk/: domestica-u4.js  domestica-u5.js  package-lock.json  package.json
domestika/: domestica-u2.js  domestica-u3.js  domestica-u6.js  package.json
fractals/: index.html  script.js  style.css
nannou-sketch/: .gitignore  Cargo.toml
nannou-sketch/assets/: .xdp-rainbow_source.svg.2025_03_21_19_03_36.0.svg-VME4ux  .xdp-tile2.png-KSmwZn
nannou-sketch/bertools/: Cargo.toml
nannou-sketch/bertools/src/: grid.rs  lib.rs  schemes.rs
nannou-sketch/boobies/: Cargo.toml
nannou-sketch/boobies/src/: main.rs
nannou-sketch/divertile/: Cargo.toml
nannou-sketch/divertile/src/: main.rs  models.rs
nannou-sketch/find-love-maze/: Cargo.toml
nannou-sketch/find-love-maze/src/: main.rs  models.rs
nannou-sketch/mandala/: Cargo.toml
nannou-sketch/mandala/src/: main.rs  (+1 more)
nannou-sketch/maze-ish-round/: Cargo.toml
nannou-sketch/perlin/: Cargo.toml
nannou-sketch/perlin/src/: main.rs
nannou-sketch/poc-image/: Cargo.toml
nannou-sketch/springfield/: Cargo.toml
nannou-sketch/springfield/src/: main.rs  models.rs
nannou-sketch/src/: main.rs
nannou-sketch/waves/: Cargo.toml
perlin/src/: main.rs
processing/Arctangent/: Arctangent.pde
processing/AttractionModels/: AttractionModels.pde  attraction.pde
processing/BirdSeed/: BirdSeed.pde  Shapes.pde
processing/ConnectingCircles/: ConnectingCircles.pde
processing/LSystems/: LSystem.pde  LSystems.pde
processing/MetroMap/: MetroMap.pde
processing/NoodleLove/: NoodleLove.pde
processing/RecursiveSplit/: RecursiveSplit.pde
processing/ThePhasesOfUs/: ThePhasesOfUs.pde  attraction.pde  grid.pde  metaBall.pde  mover.pde
processing/WobblyCircle/: WobblyCircle.pde
processing/bootstrap/: bootstrap.pde
(+6 files in other folders)
