[package]
name = "find-love-maze"
version = "0.1.0"
authors = ["Bèr Kessels <ber@berk.es>"]
edition = "2021"

description = "Art experiments: Find Love in Chaos"
keywords = ["creative", "sketch", "graphics", "art", "maze", "valentines", "love"]
license = "MIT"

[dependencies]
nannou = "0.19"
bertools = { path = "../bertools" }
