[package]
name = "nannou-sketch"
version = "0.1.0"
authors = ["Bèr Kessels <ber@berk.es>"]
edition = "2021"

description = "Art experiments"
readme = "README.md"
keywords = ["creative", "sketch", "graphics", "art"]
license = "MIT"

[dependencies]
nannou = "0.19"

[[example]]
name = "maze-ish-round"
path = "maze-ish-round/main.rs"
